--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>WELCOME</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -11,9 +12,6 @@
 </head>
 
 <body>
-  <div>
-
-  </div>
   <!-- <p><a href="">Twitter Clone</a></p> -->
   <h1>Backend Final Assignment</h1>
 </body>
